--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "react-native-qrcode",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "react-native qrocode generator",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/cssivision/react-native-qrcode.git"
+    "url": "https://github.com/raazatul7/react-native-qrcode.git"
   },
   "keywords": [
     "react-native",
     "qrcode"
   ],
-  "author": "sivision.chen <cssivision@gmail.com>",
+  "author": "atulraj <raazatul7@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cssivision/react-native-qrcode/issues"
+    "url": "https://github.com/raazatul7/react-native-qrcode/issues"
   },
-  "homepage": "https://github.com/cssivision/react-native-qrcode#readme",
+  "homepage": "https://github.com/raazatul7/react-native-qrcode#readme",
   "dependencies": {
     "create-react-class": "^15.6.0",
     "prop-types": "^15.5.10",
